[gd_scene load_steps=11 format=2]

[ext_resource path="res://code/bird_settings.gd" type="Script" id=1]
[ext_resource path="res://code/floor.gd" type="Script" id=2]
[ext_resource path="res://code/world.gd" type="Script" id=3]
[ext_resource path="res://assets/audio/bump.ogg" type="AudioStream" id=4]
[ext_resource path="res://code/obstacles_settings.gd" type="Script" id=5]
[ext_resource path="res://assets/floor/floor_fill.png" type="Texture" id=6]
[ext_resource path="res://assets/audio/point.mp3" type="AudioStream" id=7]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=3]

[sub_resource type="RectangleShape2D" id=2]

[node name="world" type="Node2D"]
script = ExtResource( 3 )

[node name="obstacles" type="Node2D" parent="."]
script = ExtResource( 5 )
scrolling_speed = 175.0
gap = 80.0
obstacle_scale = 3.0
obstacle_interval = 275.0

[node name="bird_settings" type="Node" parent="."]
script = ExtResource( 1 )
gravity = 40.0
flap_speed = 550.0
fall_speed_limit = 1000.0
rotation_speed = 3.0
bird_scale = 0.6

[node name="floor" type="StaticBody2D" parent="."]
collision_layer = 2
script = ExtResource( 2 )
scrolling_speed = 175
segment_scale = 2

[node name="collision_shape_2d" type="CollisionShape2D" parent="floor"]
shape = SubResource( 1 )

[node name="floor_fill" type="Sprite" parent="floor"]
texture = ExtResource( 6 )

[node name="segments" type="Node2D" parent="floor"]

[node name="hitbox" type="Area2D" parent="floor"]
collision_layer = 2

[node name="collision_shape_2d" type="CollisionShape2D" parent="floor/hitbox"]
shape = SubResource( 3 )

[node name="obstacle_trigger" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="collision_shape_2d" type="CollisionShape2D" parent="obstacle_trigger"]
shape = SubResource( 2 )

[node name="bird_bump_player" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="point_capture_player" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -5.0

[connection signal="bird_bumped" from="floor" to="." method="_on_bird_bumped"]
[connection signal="body_entered" from="floor/hitbox" to="floor" method="_on_hitbox_body_entered"]
[connection signal="area_entered" from="obstacle_trigger" to="." method="_on_obstacle_trigger_area_entered"]
